Added an empty template

--- a/style01.css
+++ b/style01.css
@@ -1,4 +1,28 @@
 /* #0 */
-body { 
-    font-size:36px; 
+div.document {
+
+}
+
+div#title {
+
+}
+
+div.content {
+
+}
+
+div#menuBar{
+
+}
+
+#menuBarList{
+
+}
+
+.menuBarItem {
+
+}
+
+div#text{
+    
 }
