--- a/style02.css
+++ b/style02.css
@@ -1,2 +1,29 @@
 /* #1 */
 body { font-size:16px; }
+div.document {
+
+}
+
+div#title {
+
+}
+
+div.content {
+
+}
+
+div#menuBar{
+
+}
+
+#menuBarList{
+
+}
+
+.menuBarItem {
+
+}
+
+div#text{
+    
+}
