--- a/style03.css
+++ b/style03.css
@@ -1,2 +1,29 @@
 /* #2 */
 body { font-size:12px; }
+div.document {
+
+}
+
+div#title {
+
+}
+
+div.content {
+
+}
+
+div#menuBar{
+
+}
+
+#menuBarList{
+
+}
+
+.menuBarItem {
+
+}
+
+div#text{
+    
+}
