--- a/style04.css
+++ b/style04.css
@@ -1,2 +1,29 @@
 /* #3 */
 body { font-size:8px; }
+div.document {
+
+}
+
+div#title {
+
+}
+
+div.content {
+
+}
+
+div#menuBar{
+
+}
+
+#menuBarList{
+
+}
+
+.menuBarItem {
+
+}
+
+div#text{
+    
+}
