--- a/style01.css
+++ b/style01.css
@@ -3,49 +3,113 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-div.document {
-
-}
-
-div#title {
-
-}
-
-div.content {
-
-}
-
-div#menuBar{
-
-}
-
-#menuBarList{
-
-}
-
-.menuBarItem {
-
-}
-
-div#text{
-
-}
-
-div#sidebar{
-    height: 100%;
-    width: 150px;
-    position: -webkit-sticky; /* for Safari users */
+#title{
     position: sticky;
-    top: 0px;
-    float: right;
-    margin-top: 100px;
-    padding-top: 40px;
-    background-color: lightblue;    
-    padding: 8px;
-    font-size: 24px;
-    display: block;
+    background-color:rgb(0, 255, 0);
+    border-radius: 25px;
+    padding: 20px;
+    left:10%;
+    width:100%;
+    height: 110px;
+    top:0%;
 }
 
-div#bottom{
-
+h1 {
+    text-align: center;
 }
+
+.bar-item{
+    padding:8px 16px;
+    float:left;
+    width:100%;
+    text-align: center;
+    border:black;
+    display:block;
+    outline:0}
+
+.button{
+    border:none;
+    display:inline-block;
+    padding:8px 16px;
+    vertical-align:middle;
+    overflow:hidden;
+    text-decoration:none;
+    color:inherit;
+    background-color:inherit;
+    text-align:center;
+    cursor:pointer;
+    white-space:nowrap
+}
+
+.sidebar{
+    height:100%;
+    width: 200px;
+    top:0%;
+    background-color:#fff;
+    position:fixed!important;
+    z-index:1;
+    overflow:auto
+}
+
+* {
+  box-sizing: border-box;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+  @media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
