--- a/style02.css
+++ b/style02.css
@@ -1,37 +1,127 @@
-/* #1 */
-body { font-size:16px; }
-div.document {
+/* #0 */
+table, th, td, li {
+    border:2px solid black;
 
 }
+body{
+    font-size:36px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-image: linear-gradient(to left,black,white);
+}
 
+div.document {
+    font-display:initial;
+}
 div#title {
-
+    font-size:24px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 div.content {
-
+    position: relative;
+}
+a:hover {
+    background: #ddd;
+    color: black;
+    background: linear-gradient(
+        to right, #aa0545, #07b975,
+        #cf23cf, #eedd44);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+a {
+    position: relative;
+    font-size: 25px;
+    font-family: 'Times New Roman';
+    color:black;
+   
+}
+li:hover {
+    background-color: #ddd;
+    color: black;
+}
+#text p {
+    font-size: 20px;
+    position:relative;
+    margin-left: -33%;
 }
 
 div#menuBar{
-
+  width: 40px;
+  border-radius: 5px;
+  width: 25%; margin-left: 25%;
 }
-
 #menuBarList{
-
+    width: 75%; margin-left: 0%;
 }
 
 .menuBarItem {
+    width: 75%; margin-left: 0%;
+    font-size: 24px;
+}
+#text h1 {
+    margin-left: -33%;
+    
+}
+#text p::before {
+    content:"";
+    position: absolute;
+    background-color:black;
+    width: 85px;
+    height: 4px;
+    top:-25px;
+    float:none;
+}
+h3{
+    font-size:24px;
+    background: linear-gradient(
+        to right, #f32170, #ff6b08,
+        #cf23cf, #eedd44);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 
 }
-
+#sidebar p {
+    font-size: 16px;
+    font-family: 'Times New Roman';
+}
+#sidebar p::before {
+    content:"";
+    position: absolute;
+    background-color:black;
+    width: 85px;
+    height: 4px;
+    top:51px;
+    float:none;
+}
+h1 {
+    font-size:24px;
+    font-family: Arial, 
+        Helvetica, sans-serif;
+    background: linear-gradient(
+        to right, #f32170, #ff6b08,
+        #cf23cf, #eedd44);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
 div#text{
-    
+    width: 75%; margin-left: 25%;
 }
 
 div#sidebar{
-
+    height: 25%;   
+    font-size: 12px;
+    display:inline-block;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 25%;
+    color:black;
 }
-
 div#bottom{
-
+    position: inherit;
+    font-size: 16px;
 }
