--- a/style03.css
+++ b/style03.css
@@ -1,37 +1,92 @@
-/* #2 */
-body { font-size:12px; }
-div.document {
+/* #2 
+Primary: 0069CC  Secondary Blue: 001D3D Text: 000814  Accent Yellow: FFC300
+*/
+body { 
+    font-size:12px; 
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: #0069CC;
+}
 
+div.document {
+    font-display:initial;
+    margin: 20px 50px 20px 70px;
 }
 
 div#title {
-
+    font-size: 20px;
+    background-color: #FFC300;
+    text-align: center;
+    border: 10px solid #001D3D;
+    border-radius: 4px;
+    color:#001D3D;
 }
-
 div.content {
-
+    background-color: #001D3D;
 }
 
 div#menuBar{
-
+    font-size: 14px;
+    position: absolute;
+    top: 240px;
+    width: 140px;
+    height: 120px;
+    background-color: #FFC300;
+    border: 4px solid #001D3D;
+    border-radius: 3px;
 }
 
 #menuBarList{
-
+    text-align: left;
+    color:#001D3D;
 }
 
 .menuBarItem {
-
+    color:#001D3D;
 }
 
 div#text{
-    
+    color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: absolute;
+    right: 210px;
+    width: 500px;
+    text-align: center;
 }
 
-div#sidebar{
-
+div#sidebar{ 
+    background-color: #FFC300;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    position: absolute;
+    top: 220px;
+    right: 20px;
+    width: 140px;
+    height: 220px;
+    border: 4px solid #001D3D;
+    border-radius: 3px;
+   
 }
 
 div#bottom{
+    background-color: #FFC300;
+    color: #001D3D;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    border: 4px solid #001D3D;
+    position: absolute;
+    top: 400px;
+    width: 140px;
+    text-align: center;
+}
 
+a {
+    color: #001D3D;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    font-style: italic;
+}
+
+.white-headline {
+    color: #001D3D;
+    border: 1px solid #001D3D;
 }
