--- a/style01.css
+++ b/style01.css
@@ -8,8 +8,8 @@ body{
     background-color:rgb(0, 255, 0);
     border-radius: 25px;
     padding: 20px;
-    left:10%;
-    width:100%;
+    left: 200px;
+    width:auto;
     height: auto;
     top:0%;
 }
@@ -18,17 +18,17 @@ h1 {
     text-align: center;
 }
 
-#menu-bar, #text{
+#menuBar, #text{
   border:rgb(0, 255, 0);
   border-style: groove;
   border-radius: 25px;
 }
 
-#menu-bar-list {
+#menuBarList {
   list-style-type: circle;
 }
 
-#menu-bar-item{
+#menuBarItem{
     padding:8px 16px;
     float:left;
     width:100%;
@@ -38,89 +38,24 @@ h1 {
     outline:0
   }
 
-.menu-bar-item:hover {
+.menuBarItem:hover {
   background-color: rgb(168, 168, 168);
 }
 
-.button{
-    border:none;
-    display:inline-block;
-    padding:8px 16px;
-    vertical-align:middle;
-    overflow:hidden;
-    text-decoration:none;
-    color:inherit;
-    background-color:inherit;
-    text-align:center;
-    cursor:pointer;
-    white-space:nowrap
-}
 
-.sidebar{
-    height:100%;
-    width: 200px;
-    top:0%;
-    background-color:#fff;
-    position:fixed!important;
-    z-index:1;
-    overflow:auto
-}
-
-* {
-  box-sizing: border-box;
-}
-
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+#sidebar{
+  border-radius: 25px;
+  border: seagreen;
+  background-color: rgb(33, 87, 56);
+  height:100%;
+  width: 200px;
+  top:0%;
   float: right;
+  background-color:#fff;
+  position:fixed;
+  z-index:1;
 }
 
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-
-.col-25 {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-}
-
-.col-75 {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
   @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
