--- a/style01.css
+++ b/style01.css
@@ -8,7 +8,7 @@ body{
     background-color:rgb(0, 255, 0);
     border-radius: 25px;
     padding: 20px;
-    left: 200px;
+    margin-left: 200px;
     width:auto;
     height: auto;
     top:0%;
@@ -18,10 +18,13 @@ h1 {
     text-align: center;
 }
 
-#menuBar, #text{
+#menuBar, #text, #bottom{
   border:rgb(0, 255, 0);
   border-style: groove;
   border-radius: 25px;
+  text-align: center;
+  position: relative;
+  margin-left: 200px;
 }
 
 #menuBarList {
@@ -30,7 +33,6 @@ h1 {
 
 #menuBarItem{
     padding:8px 16px;
-    float:left;
     width:100%;
     text-align: center;
     border:black;
@@ -45,8 +47,9 @@ h1 {
 
 #sidebar{
   border-radius: 25px;
-  border: seagreen;
-  background-color: rgb(33, 87, 56);
+  border:rgb(0, 255, 0);
+  border-style: groove;
+  color: seagreen;
   height:100%;
   width: 200px;
   top:0%;
