--- a/style01.css
+++ b/style01.css
@@ -2,7 +2,8 @@
 Author: Alex Berryhill
 */
 body{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:monospace;
+    background-color: steelblue;
 }
 
 #title{
