--- a/style01.css
+++ b/style01.css
@@ -2,7 +2,10 @@
 Author: Alex Berryhill
 */
 body{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-image: url("bruce.jpeg");
+  background-size: contain;  
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #title{
@@ -18,6 +21,9 @@ body{
 
 h1 {
     text-align: center;
+    font-size: 5vw;
+  
+    
 }
 
 #menuBar, #text, #bottom{
@@ -68,3 +74,5 @@ h1 {
       margin-top: 0;
     }
   }
+
+  
