--- a/style04.css
+++ b/style04.css
@@ -1,146 +1,77 @@
-/* #3 
-Author: Alex Berryhill
+/*
+Author: Dylan Ding
 */
 
-body { 
-    font-size:8px;
-    background-image : url("venom.jpeg");
-    
+body{
+    background-color:cyan;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: center;
+}
+
+p {
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;
+  }
+
+table, th, td, li {
+    border:2px solid black;
+
 }
 
 div#title {
-    font-size:24px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    border-radius: 100%;
-    background-color: slateblue;
-}
-
-div.content {
-    position: relative;
-    border-radius: 100%;
-    background-color: rgb(70, 65, 104);
-}
-a:hover {
-    background: rgb(65, 43, 43);
-    color: rgb(192, 29, 29);
-    background: linear-gradient(
-        to right, #aa0545, #07b975,
-        #cf23cf, #eedd44);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-a {
-    position: relative;
-    font-size: 25px;
-    font-family: 'Times New Roman';
-    color:black;
-   
-}
-li:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-#text {
-    border-radius: 100%;
-    background-color: rgb(90, 205, 109);
-}
-#text p {
-    font-size: 20px;
-    position:relative;
-    margin-left: -33%;
-}
-
-div#menuBar{
-  text-align: center;
-  size: 4vw;
-  font-weight: bold ;
-  width: 40px;
-  border-radius: 100%;
-  background-color: rgb(205, 90, 171);
-  width: 25%; margin-left: 25%;
-}
-#menuBarList{
-    width: 75%; margin-left: 0%;
-}
-
-.menuBarItem {
-    width: 75%; margin-left: 0%;
-    font-size: 24px;
     font-family: cursive;
-}
-#text h1 {
-    margin-left: -33%;
+    background-color:darkgoldenrod;
+    border: 15px double blueviolet;
+    padding: 50px;
+    margin: 20px;
+    text-align: center;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0
+  }
+
+
+ul#menuBarList {
+    list-style-type: upper-roman;
+    background: #ff9999;
+    list-style-position: outside;
+    font-size: large;
+    font-family: fantasy;
     
-}
-#text p::before {
-    content:"";
-    position: absolute;
-    background-color:black;
-    width: 85px;
-    height: 4px;
-    top:-25px;
-    float:none;
-}
-h3{
-    font-size:24px;
-    border-radius: 100%;
-    background-color: rgb(90, 188, 205);
-    background: linear-gradient(
-        to right, #33f321, #7fff08,
-        #8dcf23, #eedd44);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
+  }
 
-}
-#sidebar p {
-    font-size: 16px;
-    font-family: 'Times New Roman';
-}
-#sidebar p::before {
-    content:"";
-    position: absolute;
-    background-color:black;
-    width: 85px;
-    height: 4px;
-    top:51px;
-    float:none;
-}
+/* unvisited link */
+a:link {
+    color: red;
+  }
+  
+/* visited link */
+a:visited {
+    color: green;
+  }
+  
+ /* mouse over link */
+a:hover {
+    color: hotpink;
+  }
+
 h1 {
-    font-size:24px;
-    border-radius: 100%;
-    background-color: rgb(205, 107, 90);
-    font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(to right, #33f321, #7fff08,#8dcf23, #eedd44);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-}
-div#text{
-    width: 75%; 
-    margin-left: 25%;
-    border-radius: 100%;
-    background-color: rgb(90, 188, 205);
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    color: darkred;
 }
 
-div#sidebar{
-    height: 25%;   
-    font-size: 12px;
-    display:inline-block;
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 25%;
-    color:black;
-    border-radius: 100%;
-    background-color: rgb(90, 188, 205);
-}
-div#bottom{
-    position: inherit;
-    font-size: 16px;
-    border-radius: 100%;
-    background-color: rgb(90, 188, 205);
+h3 {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    color: darkred;
 }
 
+div#sidebar{ 
+    
+    text-align: center;
+    position: absolute;
+    
+ }
